# GDS-checker

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  config.yml  env.yml  gds_checker.py  pyproject.toml  setup.py
gds_checker/: L2P.yml  L3.yml  L4.yml  __init__.py  config.yml  gds_checker.py
